--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@ngx-pwa/local-storage": "^10.1.0",
     "bootstrap": ">=4.3.1",
     "core-js": "^2.5.4",
+    "ngx-sortablejs": "^3.1.4",
     "rxjs": "~6.5.2",
+    "sortablejs": "^1.11.2-alpha.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -34,6 +36,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/sortablejs": "^1.10.6",
     "angular-in-memory-web-api": "^0.8.0",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
